--- a/RestaurantManager/RestaurantManager/App.xaml
+++ b/RestaurantManager/RestaurantManager/App.xaml
@@ -4,5 +4,13 @@
     xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
     xmlns:local="using:RestaurantManager"
     RequestedTheme="Light">
-
+    <Application.Resources>
+        
+        <Style TargetType="Button">
+            <Setter Property="FontSize" Value="32" />
+        </Style>
+        <Style TargetType="TextBlock">
+            <Setter Property="FontSize" Value="32" />
+        </Style>
+    </Application.Resources>
 </Application>
