--- a/RestaurantManager/RestaurantManager/MainPage.xaml
+++ b/RestaurantManager/RestaurantManager/MainPage.xaml
@@ -7,7 +7,18 @@
     xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
     mc:Ignorable="d">
 
-    <Grid Background="{ThemeResource ApplicationPageBackgroundThemeBrush}">
+    <Grid Background="#000000" Margin="0,0,-275,10" >
+        <Grid.RowDefinitions>
+            <RowDefinition Height="255"/>
+            <RowDefinition Height="65"/>
+            <RowDefinition Height="230"/>
+        </Grid.RowDefinitions>
+        <Grid.ColumnDefinitions>
+            <ColumnDefinition Width="315"/>
+            <ColumnDefinition Width="315"/>
+        </Grid.ColumnDefinitions>
+        <TextBlock Grid.Row="0" Text="Restaurant Manager" Foreground="White" Grid.ColumnSpan="2" Margin="185,210,150,0"/>
+        <TextBlock Grid.Row="1" Text="Internal Test Version" Foreground="White" Grid.ColumnSpan="2" Margin="190,35,125,215" FontSize="24" Grid.RowSpan="2"/>
 
     </Grid>
 </Page>
